--- a/styles.css
+++ b/styles.css
@@ -3,6 +3,13 @@ body {
     
 }
 
+#map {
+    margin: 0 auto;
+
+    width: 60%;
+    /* height: 300px; */
+}
+
 #game-title {
     text-align: center;
 }
@@ -17,7 +24,7 @@ body {
     }
 }
 
-#progress-bar {
+#progress {
     display: flex;
     flex-direction: column;
     align-items: center;    
@@ -54,7 +61,7 @@ button {
     background-color: #008CBA; 
 }
 
-#connectButton {
+#joinButton {
     background-color: #008CBA; 
 }
 
